[package]
name = "site"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
actix-files = "0.1.4"
serde = "1.0.97"
tera = "0.11"
env_logger = "0.6"
log = "0.4.7"
