[package]
name = "site"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="1.0.5", features=["uds"] }
actix-files = "0.1.4"
serde = "1.0.97"
tera = "0.11"
pandoc = "0.7.0"
lettre = "0.9"
lettre_email = "0.9"
rust-ini = "0.13"
env_logger = "0.6"
dotenv = "0.14.1"
log = "0.4.7"
lazy_static = "1.3.0"
image = "0.22.1"